--- a/BolWallet/Views/SendBolPage.xaml
+++ b/BolWallet/Views/SendBolPage.xaml
@@ -6,6 +6,7 @@
     xmlns:converters="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     xmlns:viewModels="clr-namespace:BolWallet.ViewModels"
     x:DataType="viewModels:SendBolViewModel"
+	xmlns:Converters="clr-namespace:BolWallet.Converters"
     BackgroundColor="{DynamicResource SecondaryColor}">
 
 	<ContentPage.Resources>
@@ -27,6 +28,8 @@
 			</Style>
 
 			<Color x:Key="FocusedColor">#718792</Color>
+
+			<Converters:DecimalToStringConverter x:Key="DecimalToStringConverter" />
 
 		</ResourceDictionary>
 	</ContentPage.Resources>
@@ -77,7 +80,7 @@
 
 			<Entry Grid.Row="5" 
 				   Keyboard="Numeric"  
-				   Text="{Binding SendBolForm.ActualAmount, StringFormat='{0:F8} Bol'}" 
+				   Text="{Binding SendBolForm.ActualAmount, Converter={StaticResource DecimalToStringConverter}}" 
 				   PlaceholderColor="Black" 
 				   IsEnabled="False" 
 				   BackgroundColor="#EDF2F7" 
