--- a/BolWallet/Views/AccountPage.xaml
+++ b/BolWallet/Views/AccountPage.xaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:viewModels="clr-namespace:BolWallet.ViewModels"
     x:DataType="viewModels:AccountViewModel"
+	xmlns:helpers="clr-namespace:BolWallet.Helpers"
     BackgroundColor="{DynamicResource SecondaryColor}"
     xmlns:local="clr-namespace:BolWallet.Converters">
 
@@ -15,6 +16,7 @@
 	</ContentPage.ToolbarItems>
 
 	<ScrollView>
+
 		<Grid
             Padding="{OnPlatform iOS='30,60,30,30', 
                       Default='30'}"
@@ -22,7 +24,15 @@
             HorizontalOptions="Center">
 
 			<StackLayout Spacing="15" Padding="{OnPlatform iOS='30,60,30,30', Default='30'}">
-
+				<ImageButton  Command="{Binding DownloadAccountCommand}" VerticalOptions="Start" HorizontalOptions="EndAndExpand">
+					<ImageButton.Source>
+						<FontImageSource 
+					FontFamily="MaterialIconsRegular"
+					Glyph="{x:Static helpers:Icons.Download}"
+					Color="Black"
+					/>
+					</ImageButton.Source>
+				</ImageButton>
 				<Frame
 				Grid.Row="1"
 				Grid.ColumnSpan="3" 
