Implement strong password enforcement and display error message for the password field

--- a/BolWallet/Views/GenerateWalletWithPasswordPage.xaml
+++ b/BolWallet/Views/GenerateWalletWithPasswordPage.xaml
@@ -14,6 +14,7 @@
 	<Grid VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand">
 		<StackLayout>
 			<Entry Placeholder="Password" Text="{Binding Password}" PlaceholderColor="Black" IsPassword="True" WidthRequest="250" HeightRequest="50" BackgroundColor="#EDF2F7" TextColor="Black" Margin="0,0,0,10" />
+			<Label Text="{Binding PasswordErrorMessage}" TextColor="Red" FontSize="12" />
 			<Button Text="Submit" Command="{Binding SubmitCommand}" WidthRequest="100" HeightRequest="50" BackgroundColor="#4C51BF" CornerRadius="10" TextColor="White" Margin="0,10,0,0" />
 		</StackLayout>
 		<ActivityIndicator VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" IsRunning="{Binding IsLoading}" />
