Add message for transfer fees

--- a/BolWallet/Views/MoveClaimPage.xaml
+++ b/BolWallet/Views/MoveClaimPage.xaml
@@ -92,7 +92,8 @@
 				   TextColor="Black"
 				   Margin="0,0,0,10" />
 
-			<Entry Grid.Row="7" 
+			<StackLayout Grid.Row="7">
+				<Entry
 				   Keyboard="Numeric"  
 				   Text="{Binding MoveClaimForm.ActualAmount, Converter={StaticResource DecimalToStringConverter}}" 
 				   PlaceholderColor="Black" 
@@ -100,6 +101,11 @@
 				   BackgroundColor="#EDF2F7" 
 				   TextColor="Black" 
 				   Margin="0,0,0,10" />
+				<Label
+				   FontSize="10"
+				   HorizontalOptions="Start"
+				   Text="A fee of 0.00005 bol applies to every claim transfer." />
+			</StackLayout>
 
 			<Button
                 Grid.Row="8"
